Working state commit
- Add cxxtoml library (checkout @ v0.1.1)
- Remove all spdlog references
- Add configuration file support
- Further compartmentalize input system
- Add support for running commands
- Add daemonizing mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
+### Personal Testing Files
+gebaard.toml
+
 ### CMake template
 CMakeCache.txt
 CMakeFiles
