--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
-add_executable(gebaard src/main.cpp src/io/input.cpp src/io/input.h src/config/config.cpp src/config/config.h src/daemonizer.cpp src/daemonizer.h)
+add_executable(gebaard
+        src/main.cpp
+        src/io/input.cpp
+        src/io/input.h
+        src/config/config.cpp
+        src/config/config.h
+        src/daemonizer.cpp
+        src/daemonizer.h)
 
 find_package(PkgConfig)
 if (PKG_CONFIG_FOUND)
@@ -13,7 +20,6 @@ if (PKG_CONFIG_FOUND)
 endif ()
 
 find_package(udev)
-find_package(spdlog)
 
 target_link_libraries(gebaard ${LIBINPUT_LIBRARIES} ${UDEV_LIBRARIES} stdc++fs)
 target_include_directories(gebaard PUBLIC ${LIBINPUT_INCLUDE_DIRS} ${UDEV_INCLUDE_DIRS} libs/cxxopts/include libs/cpptoml/include)
